--- a/ui/blur.ui
+++ b/ui/blur.ui
@@ -24,7 +24,7 @@
        <item>
         <widget class="QComboBox" name="comboBox_layerToBlur">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
